# e-co

./: .env.na  .envrc.example  .eslintrc.json  .gitignore  README.md  buf.gen.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  ether-net.yml
apps/desktop/: README.md
apps/desktop/ether-net/: .env.example  README.md  index.html  package.json  vite.config.ts
apps/desktop/ether-net/src/: App.tsx  styles.css
apps/desktop/ether-net/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/ether-net/src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs
apps/desktop/ether-net/src-tauri/src/core/: artifact_drive.rs  mod.rs  portal_manager.rs  presence_server.rs  search_indexer.rs  teleport_router.rs
apps/desktop/ether-net/src-tauri/src/ui/: drive_panel.rs  landing.rs  mod.rs  portal_browser.rs  search_panel.rs
apps/mobile/ethos/: .env  .eslintrc.js  App.tsx  README.md  app.config.ts  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/ethos/patches/: metro+0.83.1.patch  metro-cache+0.83.1.patch
apps/wallpaper/: Cargo.toml  README.md
apps/wallpaper/host/: Cargo.toml
apps/wallpaper/host/src/: lib.rs
apps/wallpaper/host/src/platform/: macos.rs  mod.rs  wayland.rs  windows.rs
apps/web/: .eslintrc.json  README.md  next.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: README.md  layout.tsx  page.tsx
apps/web/backend/: README.md
apps/web/components/: Desktop.tsx  ProceduralBackground.tsx
apps/web/ether-pod/: README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tsconfig.json  vitest.config.ts
apps/web/ethos/: API.md  README.md
apps/web/frontend/: README.md
apps/web/lib/: frequency.ts
apps/web/pod-world/: README.md  package.json  vitest.config.ts
apps/web/scripts/: README.md  copy-env.js
distro/linux/: README.md
distro/nix/: flake.nix
docs/: architecture.md  assets.md  development.md  roadmap.md  testing.md  usage.md
docs/api/: analytics.md
docs/auth/: README.md
docs/commerce/: providers.md
docs/tasks/: backlog.md
engines/eco-core/: Cargo.toml
engines/eco-core/src/: lib.rs  manifest.rs
engines/eco-render/: Cargo.toml
engines/eco-render/src/: lib.rs
engines/eco-wm/: Cargo.toml
engines/eco-wm/src/: lib.rs
examples/desktop/: CMakeLists.txt  main.cpp
examples/worlds/aurora/: ECO.toml
nixos/: README.md  desktop.nix  flake.nix  module.nix  server.nix  shell.nix
nixos/example/: CMakeLists.txt  default.nix  main.cpp
proto/: actions.proto  buf.yaml  ethos.proto  search.proto  symbolcast.proto  windows.proto
runtime/: README.md  package.json  tsconfig.json
runtime/quantum/: environment_view_manager.cpp  noise_qpp.cpp
runtime/src/: commands.ts  gestures.ts  index.ts  state.ts
sdks/cpp-qpp/: CMakeLists.txt
sdks/cpp-qpp/include/: eco_qpp.h
sdks/cpp-qpp/src/: qpp.cpp
sdks/js/: README.md  package.json
sdks/js/src/: ai.ts  auth.ts  index.ts  state.ts
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
services/agent/: Cargo.toml  build.rs
services/agent/src/: error.rs  frequency.rs  grpc_service.rs  jobs.rs  lib.rs  main.rs  pipeline.rs  proto.rs  publisher.rs  qpp_bridge.rs  symbolcast.rs  tests.rs
services/api/: Cargo.toml
services/api/src/: main.rs  search.rs  verification.rs
services/ethos-gateway/: Cargo.toml  build.rs  package-lock.json  package.json
services/ethos-gateway/migrations/: 0001_create_users.sql  0002_add_is_guest_to_users.sql  0003_add_user_profile_data.sql  0004_create_pods.sql  0005_create_artifacts.sql  0006_create_pod_items.sql  0007_create_orders.sql  0008_create_quests.sql  0009_create_guilds.sql  0010_create_memberships.sql  0011_create_conversations.sql  0012_create_messages.sql  0013_add_visibility_to_pod_items.sql  0014_create_artifact_variants_and_cart.sql  0015_create_quest_applications.sql  0016_seed_demo_data.sql  0017_create_refresh_sessions.sql  0018_create_analytics_events.sql
services/ethos-gateway/src/: auth.rs  config.rs  lib.rs  main.rs  matrix.rs  migrations.rs  state.rs
services/ethos-gateway/src/analytics/: events.rs  mod.rs
services/ethos-gateway/src/analytics/queries/: mod.rs
services/ethos-gateway/src/commerce/providers/: mod.rs  models.rs  printify.rs  shopify.rs
services/ethos-gateway/src/grpc/: mod.rs
services/ethos-gateway/src/realtime/: index.ts
services/ethos-gateway/src/realtime/bridge/: burstLimiter.ts  config.ts  featureFlags.ts  index.ts  middleware.ts
services/ethos-gateway/src/routes/: analytics.rs  artifacts.rs  auth.rs  conversations.rs  guilds.rs  mod.rs  orders.rs  pod_items.rs  pods.rs  quests.rs  stream.rs  users.rs
services/ethos-gateway/src/services/: artifacts.rs  mod.rs  orders.rs  pod_items.rs  pods.rs  postgres_guild_service.rs  postgres_quest_service.rs
services/ethos-gateway/test/fixtures/printify/: catalog.json  fulfillments.json
services/ethos-gateway/test/fixtures/shopify/: catalog.json  fulfillments.json
services/ethos-gateway/tests/: integration.rs
services/ethos-guild/: .env.example  .eslintrc.cjs  .gitignore  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
services/ethos-guild/src/: auth.ts  config.ts  index.ts  models.ts  server.ts  store.ts
services/indexer/: Cargo.toml
services/indexer/src/: main.rs
shared/: environments.json
shared/events/: Cargo.toml  README.md  index.ts  web.ts
shared/events/src/: lib.rs
shared/quest-status/: Cargo.toml
shared/quest-status/src/: lib.rs
tools/: generate-ethos-proto.mjs
tools/packer/: README.md
tools/symbolcast/: Cargo.toml  README.md  build.rs
tools/symbolcast/src/: lib.rs  main.rs
tools/templates/: ethos_connect.ts  ethos_pb.ts
web/: README.md  package-lock.json  package.json  tsconfig.json
web/public/: environments.json  index.html
web/scripts/: copy-env.js
web/src/: index.tsx  logger.ts
web/src/components/: CommandPalette.tsx  Desktop.tsx  EnvManager.tsx  LauncherMenu.tsx  ModelDashboard.tsx  ProceduralBackground.tsx  Window.tsx
(+435 files in other folders)
