[package]
name = "eco-core"
version = "0.1.0"
edition = "2021"
description = "Core ECS structures and manifest loading for the E-CO engine"
license = "MIT"

[lib]
name = "eco_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
