[package]
name = "eco-render"
version = "0.1.0"
edition = "2021"
description = "Bevy systems for immersive Ether Computing rendering"
license = "MIT"

[lib]
name = "eco_render"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_winit", "bevy_scene"] }
thiserror = "1.0"
