[package]
name = "eco-agent"
version = "0.1.0"
edition = "2021"
description = "Automation agent bridging SymbolCast and Q++"
license = "MIT"

[dependencies]
async-nats = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
