[package]
name = "eco-agent"
version = "0.1.0"
edition = "2021"
description = "Automation agent bridging SymbolCast and Q++"
license = "MIT"

[dependencies]
async-nats = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
tonic-web = "0.9"
cxx = "1.0"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9"
cxx-build = "1.0"
