[package]
name = "eco-api"
version = "0.1.0"
edition = "2021"
description = "Axum gateway exposing search and action endpoints"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.11", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
