[package]
name = "eco-api"
version = "0.1.0"
edition = "2021"
description = "Axum gateway exposing search and action endpoints"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
hyper = { version = "1", features = ["full"] }
eco-core = { path = "../../engines/eco-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tantivy = { version = "0.20", default-features = false, features = ["mmap"] }
async-trait = "0.1"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"

[patch.crates-io]
zstd-safe = { path = "../../vendor/zstd-safe" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
