[package]
name = "ethos-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethos_gateway"
path = "src/lib.rs"

[[bin]]
name = "ethos-gateway"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-nats = "0.42"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std", "password-hash"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = { version = "0.10", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.7", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
dotenvy = "0.15"
quest-status = { path = "../../shared/quest-status" }

matrix-sdk = { version = "0.13", optional = true }

[features]
default = ["in-memory"]
in-memory = []
matrix = ["matrix-sdk"]

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dev-dependencies]
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
http-body-util = "0.1"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt", "time"] }
tower = "0.4"
