[package]
name = "eco-indexer"
version = "0.1.0"
edition = "2021"
description = "Indexer service that feeds Tantivy and Qdrant"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
tantivy = "0.21"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
