[package]
name = "eco-indexer"
version = "0.1.0"
edition = "2021"
description = "Indexer service that feeds Tantivy and Qdrant"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tantivy = { version = "0.20", default-features = false, features = ["mmap"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
quest-status = { path = "../../shared/quest-status" }

[patch.crates-io]
zstd-safe = { path = "../../vendor/zstd-safe" }
