[package]
name = "symbolcastd"
version = "0.1.0"
edition = "2021"
description = "Mock SymbolCast daemon cycling through gestures and publishing actions"
license = "MIT"

[dependencies]
async-nats = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"
