[package]
name = "ether-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
bevy = { version = "0.11" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
urlencoding = "2"
thiserror = "1"
parking_lot = "0.12"
log = "0.4"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
